fix: :bug: fix select z-index

--- a/src/components/elements/Select/Select.scss
+++ b/src/components/elements/Select/Select.scss
@@ -1,5 +1,9 @@
 @import '../../../style-lib';
 
+.lens-ui-select-input__menu-portal > .lens-ui-select-input__menu {
+  z-index: map-get($layers, 'Select');
+}
+
 .lens-ui-select-input {
   @include lens-ui-typography;
 
